@@ -3,7 +3,7 @@
 # Ignore Cacti config
 include/config.php
 # Ignore Cacti log files
-log/cacti.log
+log/**
 # Ignore Cacti rrd files
 rra/**
 # Ignore Cacti cache files (comment out to commit new directory)
